# Streaming_explorer

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  appspec.yaml  build.tf  buildspec.yaml  data_load_dag.py  docker-compose.aws.yaml  docker-compose.yaml  docker_compose.yaml  environment.yaml  main.py  main.tf  netflix.py  output.tf  pyproject.toml  requirements.txt  requirements.yml  sample.py  variables.tf  vm.tf
api/: README.md
app/: Widget.py  app.py
nginx/: certificate.sh  nginx.conf
notebooks/: Preprocess.ipynb  aws.md  books.csv  netflix_title_eda.ipynb  postgres_demo.ipynb  preprocess_data.ipynb  pyspark_test.ipynb  sql_demo.ipynb
scripts/: copy_env_and_certs.sh  start_application.sh  stop_and_clean.sh  validate_service.sh
src/backend/: Dockerfile  README.md  app.py  dependencies.py  experimental.py  pyproject.toml  recommender.py  requirements.txt  schema.py  spark_eda.py
src/backend/database/: config.py  model.py
src/backend/database/mysql/: config.py  model.py
src/backend/database/postgresql/: config.py  model.py
src/backend/eda/: eda_pandas.py  eda_spark.py
src/backend/routes/: amazon.py  dependencies.py  disney.py  netflix.py
src/frontend/: Dockerfile  Home.py  home.py  pyproject.toml  requirements.txt
src/frontend/common/: Widget.py  components.py  utils.py
src/frontend/pages/: 01_Netflix.py  01_Netflix_Movies_and_TV_Shows.py  02_Amazon.py  02_Amazon_Prime_Movies_and_TV_Shows.py  03_Disney+.py  03_Disney_Plus_Shows.py
terraform/: .env  build.tf  cloudwatch.tf  codebuild.tf  codedeploy.tf  ec2.tf  ecr.tf  (+9 more)
(+5 files in other folders)
