[tool.poetry]
name = "streaming-explorer-backend"
version = "0.1.0"
description = "A comprehensive exploration of shows available on popular streaming platforms."
authors = ["Omar <omar120cuet@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.0"
uvicorn = "0.27.0.post1"
pandas = "2.2.0"
SQLAlchemy = "2.0.25"
python-dotenv = "1.0.1"
plotly = "5.18.0"
scikit-learn = "1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"